syntax = "proto3";
package auth.v1;
option go_package = "github.com/tradingbothub/platform/api/proto/auth";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
  int64 expires_in = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string error = 3;
}
